--- a/conexion_supabase/index.html
+++ b/conexion_supabase/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Conexion -> SupaBase</title>
     <script src="script.js"></script>
-</head>
-<body>
+  </head>
+  <body>
     <form action="script.js" method="post">
-        <label for="name">Nombre:</label><input type="text">
-        <label for="email"></label><input type="email">
-        <label for="password"></label><input type="password">
+      <label for="name">Nombre:</label><input type="text" />
+      <label for="email">Email</label><input type="email" />
+      <label for="city">Ciudad:</label><input type="text" />
     </form>
-</body>
+  </body>
 </html>
